--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -14,9 +15,15 @@
         android:theme="@style/Theme.Proyecto1raentrega"
         tools:targetApi="31"
         android:usesCleartextTraffic="true">
+
+        <activity
+            android:name=".DetallePeliculaActivity"
+            android:exported="false" /> <!-- <<< AÑADIDO AQUÍ -->
+
         <activity
             android:name=".MainScreenActivity"
             android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -25,6 +32,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
