Refactorizar codigo, error en favoritas y ver y  añadir funcionalidad de compartir

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:usesCleartextTraffic="true">
 
         <activity
-            android:name=".DetallePeliculaActivity"
+            android:name=".activity.DetallePeliculaActivity"
             android:exported="false" />
 
         <activity
@@ -25,7 +25,7 @@
             android:exported="false" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MediaActivity"
             android:exported="false" />
 
         <activity
